# rust-analyzer

./: Cargo.toml
crates/hir/src/: lib.rs
crates/ide/: Cargo.toml
crates/ide-db/: Cargo.toml
crates/ide-db/src/: lib.rs  regloc.rs
crates/ide/src/: static_index.rs
crates/regloc/: Cargo.toml
crates/regloc/src/: lazy.rs  lib.rs  model.rs  traverse_hir.rs  traverse_mir.rs
crates/rust-analyzer/: Cargo.toml
crates/rust-analyzer/src/: cli.rs
crates/rust-analyzer/src/cli/: flags.rs  regloc.rs
